--- a/JAVASCRIPT/js_01.html
+++ b/JAVASCRIPT/js_01.html
@@ -23,9 +23,9 @@
 
         //console.log('name', name)
 
-        /* let check = confirm('이동하시겠습니까?')
+        let check = confirm('이동하시겠습니까?')
 
-        if(check) {
+        /*if(check) {
             location.href='https://www.naver.com';
             console.log ('해당페이지로 이동하시겠습니까?')
         } */
