--- a/JAVASCRIPT/js_05.html
+++ b/JAVASCRIPT/js_05.html
@@ -73,10 +73,11 @@
         // 콜백 함수의 반환 값을 논리값
         // 반환된 논리값이 true인 배열의 요소값들을 모아서 새로운 배열을 생성하고 반환
 
-        let arr3 = arr1.filter(function(val, index){
-            // 30보다 작은 값들만 모아서 생성해주는 조건
-            return index%2 == 1
-        })
+        // let arr3 = arr1.filter(function(val, index){
+        //     // 30보다 작은 값들만 모아서 생성해주는 조건
+        //     return index%2 == 1
+        // })
+        let arr3 = arr1.filter((val) => {return val<30})
 
         console.log('filter() => ', arr3)
 
